--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -49,7 +49,8 @@
         </span>
         <span class="switch">
             Powered by
-            <a href="https://blogc.rgm.io/">blogc {{ BLOGC_VERSION }}</a>.
+            <a href="https://blogc.rgm.io/">blogc {{ BLOGC_VERSION }}</a> |
+            <a href="/imprint/" rel="nofollow">Impressum/Imprint</a>
         </span>
       </p>
     </footer>
